--- a/style.css
+++ b/style.css
@@ -49,6 +49,7 @@ nav ul li a:hover {
 .section {
     margin-bottom: 40px;
     background-color: white;
+    background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url('mhws5.jpg');
     border-radius: 10px;
     padding: 25px;
     box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
