--- a/style.css
+++ b/style.css
@@ -4,8 +4,11 @@ body {
     padding: 0;
     background-color: #f5f5f5;
     color: #333;
-    background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url('mhws5.jpg');
+    background-image: url('mhws5.jpg');
+    background-size: cover; /* 画像が画面にフィットするように */
+    background-position: center center; /* 画像を中央に配置 */
 }
+
 header {
     background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url('https://blog.ja.playstation.com/tachyon/sites/7/2024/05/ac97f97b6fda13c9a26d28ab77de11ef2aa7f5d9.jpg?resize=1088%2C612&crop_strategy=smart');
     background-size: cover;
